--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<title>
-		Engage business 2-Just Another Engage Theme Demos Site
+		Engage business 2-Just Another Engage Theme Demos Sit
 	</title>
 	<link rel="stylesheet" type="text/css" href="index_style.css">
 	<link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
